<resources>
    <string name="app_name">NoteApp</string>
    <string name="my_note">My Note</string>
    <string name="search_note">Search note</string>
    <string name="note_title">Note Title</string>
    <string name="note_subtitle">Note Subtitle</string>
    <string name="type_note_here">Type note here...</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="pick_color">Pick Color</string>
    <string name="add_image">Add Image</string>
    <string name="add_url">Add URL</string>
    <string name="enter_url">Enter URL</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="delete_note">Delete Note</string>
    <string name="are_you_sure_you_want_to_delete_this_note">Are you sure you want to delete this note ?</string>
    <string name="skip">Skip</string>
    <string name="Message1">Focus on what matters most.\nManage everything, from big projects to personal moments.</string>
    <string name="Message2">Remember everything important. A central place for your notes, ideas, lists and reminders.</string>
    <string name="Message3">Plan, record and manage projects on any device - even offline.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="welcome">Welcome!</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_email">Enter Email</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="or">- - - - - or - - - - -</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_account">Already Have account?</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="enter_your_email">Enter your email address to reset your password.</string>
    <string name="send">Send</string>
    <string name="verify_message">Check your email address, we have sent you the code at phtuonganh@gmail.com</string>
    <string name="notebook">Notebook</string>
    <string name="_0">(0)</string>
    <string name="all_notes">All Notes</string>
    <string name="start_writing">Start writing</string>
    <string name="choose_a_template">Choose a template</string>
    <string name="recent">Recent</string>
    <string name="settings">Settings</string>
    <string name="user_name">User Name</string>
    <string name="email">Email</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="sign_out">Sign Out</string>
    <string name="switch_to_other_account">Switch to Other Account</string>
    <string name="my_account">My Account</string>
    <string name="input_username">Input Username</string>
    <string name="title_activity_compose">ComposeActivity</string>

</resources>