<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/background_color_primary"
    tools:context=".presentation.settings.SettingsActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageBack"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_20sdp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_back"
            app:tint="?attr/text_color_primary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/settings"
            android:textStyle="bold"
            android:textColor="?attr/text_color_primary"
            android:textSize="@dimen/_15sdp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layoutDetails"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_90sdp"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout">

        <ImageView
            android:id="@+id/imageProfile"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_80sdp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="25sp" />

        <TextView
            android:id="@+id/textName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_toEndOf="@+id/imageProfile"
            android:text="@string/user_name"
            android:textColor="?attr/text_color_primary"
            android:textSize="@dimen/_20ssp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textName"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_toEndOf="@+id/imageProfile"
            android:text="@string/email" />

    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/layoutDarkMode"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        app:layout_constraintTop_toBottomOf="@+id/layoutDetails">

        <ImageView
            android:id="@+id/icon1"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_crescent"
            app:tint="?attr/text_color_primary"
            android:layout_marginStart="25sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_toEndOf="@+id/icon1"
            android:text="@string/dark_mode"
            android:textColor="?attr/text_color_primary"
            android:textSize="@dimen/_15ssp"
            android:textStyle="bold" />


        <com.bitvale.switcher.SwitcherX
            android:id="@+id/switch1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/_30sdp"
            android:layout_alignParentEnd="true"
            android:checked="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />



    </RelativeLayout>

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:text="@string/my_account"
        android:textColor="@color/gray_50"
        android:textSize="@dimen/_11sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textSwitchAccount"
        app:layout_constraintStart_toStartOf="parent" />
    <TextView
        android:id="@+id/textSwitchAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/switch_to_other_account"
        android:textColor="@color/blue"
        android:textSize="@dimen/_15sdp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/textSignOut"
        android:layout_marginBottom="@dimen/_8sdp"
        android:layout_marginStart="@dimen/_20sdp"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/textSignOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_out"
        android:textColor="@color/red"
        android:textSize="@dimen/_15sdp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
       android:layout_margin="@dimen/_20sdp"
        app:layout_constraintStart_toStartOf="parent" />




</androidx.constraintlayout.widget.ConstraintLayout>